--- a/truespeak/templates/faq.html
+++ b/truespeak/templates/faq.html
@@ -25,7 +25,7 @@
             </li>
             <li>
                 <a href="#trust">
-                    Why should you trust us more than Google?
+                    Why should I trust ParselTongue more than Google?
                 </a>
             </li>
             <li>
