--- a/truespeak/static/css/login.css
+++ b/truespeak/static/css/login.css
@@ -1,6 +1,6 @@
 .auth-container {
-    margin-left:100px;
-    margin-top:100px;
+    margin-left:5%;
+    margin-top:50px;
 }
 
 .login-error-message {
@@ -11,10 +11,14 @@
     width:100%;
 }
 
+.login-left-side {
+    float:left;
+    margin-right:100px;
+    margin-bottom:100px;
+}
+
 .login-snake {
-    top: 200px;
     width: 500px;
-    position: absolute;
-    left: 54%;
-    z-index:-1;
+    float:left;
+    margin-top:20px;
 }
