--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -9,7 +9,6 @@
     <li data-target="#tutorial-carousel" data-slide-to="1" class="carousel-indicator"></li>
     <li data-target="#tutorial-carousel" data-slide-to="2" class="carousel-indicator"></li>
     <li data-target="#tutorial-carousel" data-slide-to="3" class="carousel-indicator"></li>
-    <!-- <li data-target="#tutorial-carousel" data-slide-to="4"></li> -->
   </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
@@ -21,14 +20,7 @@
                 </p>
             </div>
         </div>
-<!--         <div class="item preview">
-            <img class="carousel-image" src="/static/img/tutorial/gmail-locked-new.png">
-            <div class="carousel-caption">  
-                <p>
-                    Your Gmail will look exactly the same as it did before, except for one new button that appears when you write emails to other ParselTongue users.
-                </p>
-            </div>
-        </div> -->
+
         <div class="item preview">
             <img class="carousel-image" src="/static/img/tutorial/gmail-unlocked.png">
             <div class="carousel-caption">
@@ -41,7 +33,7 @@
             <img class="carousel-image" src="/static/img/tutorial/gmail-locked.png">
             <div class="carousel-caption">
                 <p>
-                    Click the lock again, to send your email unencrypted.
+                    Click the lock again to send your email unencrypted.
                 </p>
             </div>
         </div>
