--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="col-md-10">
                     <h2 class="home-bold-text">
-                       Encryption for Gmail, in your Browser.
+                       Encryption for Gmail, in your browser.
                     </h2>
                     <h3 class="home-bold-text">
                        Secure your email from eavesdroppers.
@@ -27,10 +27,6 @@
 
             <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get Parseltongue for Chrome </a>
             {% include "share_snippet.html" %}
-
-{#            <div class="home-tutorial-header">#}
-{#                <h2> Check out the tutorial below or read our <a href="/faq"/>FAQ</a> for more information.</h2>#}
-{#            </div>#}
 
             <div class="home-tutorial-header">
                Click through the tutorial below or read our <a href="/faq/">FAQ</a> to learn more.
