--- a/truespeak/templates/share_snippet.html
+++ b/truespeak/templates/share_snippet.html
@@ -10,7 +10,7 @@
 
         <div class="fb-like" data-href="http://www.getparseltongue.com" data-send="false" data-layout="button_count" data-width="300" data-show-faces="true" data-font="arial" data-action="like"></div>
 
-        <a href="http://news.ycombinator.com/submit" class="hn-share-button"  data-title="Show HN: Client side Gmail Encryption" data-url="http://www.getparseltongue.com"></a>
+        <a href="http://news.ycombinator.com/submit" class="hn-share-button"  data-title="Show HN: Client side Gmail Encryption" data-url="https://www.getparseltongue.com"></a>
     </div>
 </div>
 
