--- a/truespeak/templates/faq.html
+++ b/truespeak/templates/faq.html
@@ -90,7 +90,7 @@
             </p>
 
             <h3 id="trust"> 
-                Why should you trust us more than Google? 
+                Why should I trust ParselTongue more than Google?
             </h3>
             <p>
                 The beauty of client-side encryption is you don't have to. We don't store your password. We don't have your private key.
