--- a/truespeak/templates/initializing.html
+++ b/truespeak/templates/initializing.html
@@ -9,7 +9,7 @@
 
     <div class="at-least initializing-img-wrapper">
         <div class="initializing-img">
-            <img src="/static/img/flakes.gif"/>
+{#            <img src="/static/img/flakes.gif"/>#}
         </div>
     </div>
 
