--- a/truespeak/static/css/register.css
+++ b/truespeak/static/css/register.css
@@ -1,7 +1,61 @@
+/*.register-explain {*/
+/*width: 90%;*/
+/*float:left;*/
+/*max-width:450px;*/
+/*}*/
+
+/*.register-button {*/
+/*width:100%;*/
+/*}*/
+
+/*.register-loading {*/
+/*width: 100px;*/
+/*margin: auto;*/
+/*margin-top: 35px;*/
+/*}*/
+
+/*.loading-text {*/
+/*position: relative;*/
+/*top: -24px;*/
+/*}*/
+
+/*.register-explain p {*/
+/*font-size: 18px;*/
+/*margin-top: 35px;*/
+/*}*/
+
+/*.register-form {*/
+/*float:left;*/
+/*width:405px;*/
+/*margin-right: 45px;*/
+/*height:375px;*/
+/*}*/
+
+/*.register-snake {*/
+/*position: absolute;*/
+/*z-index: -1;*/
+/*width: 549px;*/
+/*left: 54%;*/
+/*top: 71px;*/
+/*z-index: -1;*/
+/*width: 100%;*/
+/*position:relative;*/
+/*top:-90px;*/
+/*}*/
+
+/*.register-container {*/
+/*float:none;*/
+/*margin:auto;*/
+/*width:80%;*/
+/*}*/
+
+
+/** register new **/
+
 .register-explain {
     /*width: 90%;*/
     float:left;
-    max-width:450px;
+    max-width:95%;
 }
 
 .register-button {
@@ -9,14 +63,29 @@
 }
 
 .register-loading {
-    width: 100px;
+    width: 60px;
     margin: auto;
-    margin-top: 35px;
+    margin-top: 3px;
+    background-image:none;
+    height:auto;
+    position: relative;
+    left: 9px;
+}
+.ellipsis-gif {
+    height:50px;
+}
+
+.register-message-wrapper {
+    height:30px;
 }
 
 .loading-text {
     position: relative;
     top: -24px;
+}
+
+.upper-section {
+    float:left;
 }
 
 .register-explain p {
@@ -28,7 +97,7 @@
     float:left;
     width:405px;
     margin-right: 45px;
-    height:375px;
+    min-height:290px;
 }
 
 .register-snake {
@@ -38,13 +107,30 @@
     /*left: 54%;*/
     /*top: 71px;*/
     z-index: -1;
-    width: 100%;
+    width: 450px;
     position:relative;
-    top:-90px;
+    top: -26px;
+}
+.snake-wrapper {
+    height:100px;
+    overflow:visible;
+    float:left;
 }
 
 .register-container {
     float:none;
     margin:auto;
     width:80%;
+}
+
+@media only screen and (max-width: 1200px){
+    .snake-wrapper {
+        width:20%;
+    }
+}
+
+@media only screen and (max-width: 660px){
+    .snake-wrapper {
+        display:none;
+    }
 }
