+ the html changes to show different screenshot options

--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -13,7 +13,9 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
         <div class="active item preview">
-            <img class="carousel-image" src="/static/img/tutorial/ext-icon.png">
+            <img class="carousel-image" src="/static/img/tutorial/ext-icon-signin.png">
+            <!-- <img class="carousel-image" src="/static/img/tutorial/ext-icon-blank.png"> -->
+            <!-- <img class="carousel-image" src="/static/img/tutorial/ext-icon-gmail.png"> -->
             <div class="carousel-caption">
                 <p> 
                     Click the snake to log in and out or modify your settings.
@@ -38,7 +40,8 @@
             </div>
         </div>
         <div class="item preview">
-            <img class="carousel-image" src="/static/img/tutorial/ext-popup.png">
+            <img class="carousel-image" src="/static/img/tutorial/ext-popup-tooltip.png">
+            <!-- <img class="carousel-image" src="/static/img/tutorial/ext-popup-notooltip.png"> -->
             <div class="carousel-caption">
                 <p>
                     Use the popup to make encryption a default.
