--- a/truespeak/templates/faq.html
+++ b/truespeak/templates/faq.html
@@ -44,7 +44,7 @@
                 </a>
                 <ul class="nav">
                     <li>
-                        <a href="#key-gen"> 
+                        <a href="#key-generation"> 
                             Key Generation
                         </a>
                     </li>
