--- a/truespeak/templates/share_snippet.html
+++ b/truespeak/templates/share_snippet.html
@@ -4,13 +4,13 @@
 
 <div class="share">
     <div class="subshare">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-url="https://www.getparseltongue.com/" data-text="Secure your email from eavesdroppers. Encryption for Gmail, in your browser. #parseltongue"></a>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-url="https://getparseltongue.com/" data-text="Secure your email from eavesdroppers. Encryption for Gmail, in your browser. #parseltongue"></a>
 
         <div class="g-plusone" data-size="medium" data-annotation="bubble"></div>
 
-        <div class="fb-like" data-href="https://www.getparseltongue.com/" data-send="false" data-layout="button_count" data-width="300" data-show-faces="true" data-font="arial" data-action="like"></div>
+        <div class="fb-like" data-href="https://getparseltongue.com/" data-send="false" data-layout="button_count" data-width="300" data-show-faces="true" data-font="arial" data-action="like"></div>
 
-        <a href="http://news.ycombinator.com/submit" class="hn-share-button"  data-title="Show HN: Client side Gmail Encryption" data-url="https://www.getparseltongue.com"></a>
+        <a href="http://news.ycombinator.com/submit" class="hn-share-button"  data-title="Show HN: Client side Gmail Encryption" data-url="https://getparseltongue.com"></a>
     </div>
 </div>
 
