--- a/truespeak/templates/login.html
+++ b/truespeak/templates/login.html
@@ -28,7 +28,7 @@
                     <span class="password-error-message login_error login-error-message"> 
                         Oops, email/password not found. Try again? 
                     </span>
-                        <div class="loading-gif"></div>
+                        <div class="loading-gif login-gif"></div>
                     </form>
                 </div>
                 <img class="login-snake" src="/static/img/login-snake.png"/>
