--- a/truespeak/templates/faq.html
+++ b/truespeak/templates/faq.html
@@ -120,7 +120,7 @@
             </h3>
             <p>
                 Because your ParselTongue encrypted emails are stored as cipher text on Google's servers, Gmail search won't be able to understand the contents of your emails (because it can't read them), but you will still be able to search
-                by email subject and recipient (which are not encrypted). Also, any browser you read your email from must have the ParselTongue extension installed in order to read the emails. Besides that, ParselTongue is completely seamless and won't effect your Gmail experience in any way -- other than that the NSA won't be able to read your emails anymore.
+                by email subject and recipient (which are not encrypted). Also, any browser you read your email from must have the ParselTongue extension installed in order to read the emails. Besides that, ParselTongue is completely seamless and won't effect your Gmail experience in any way &mdash; other than that the NSA won't be able to read your emails anymore.
             </p>
 
             <h3 id="future"> 
