--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -25,7 +25,9 @@
                     </div>
                 </div>
 
-            <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get Parseltongue for Chrome </a>
+            <a class="btn btn-primary chrome-btn"
+               onClick=”_gaq.push(['_trackEvent', 'sign up', 'get parseltongue']);”
+               href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get Parseltongue for Chrome </a>
             {% include "share_snippet.html" %}
 
             <div class="home-tutorial-header">
