--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -47,7 +47,7 @@
 
                     <div class="register-explain">
                         <h3>
-                            Choose a password you will remember! <br>Your password is used to encyrpt your private key and is <strong> non-recoverable. </strong>
+                            Choose a password you will remember! <br>Your password is used to encrypt your private key and is <strong> non-recoverable. </strong>
                         </h3>
                         <p>
                             To learn about how ParselTongue works and why your password is non-recoverable, read our <a href="/faq/">FAQ</a>.
