--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -21,7 +21,7 @@
         <meta charset="utf-8">
         <title> ParselTongue | {{ page_title }} </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="ParselTongue - the client-side encryption extension for Gmail.">
+        <meta name="description" content="ParselTongue - Encryption for Gmail, in your browser.">
         <meta name="author" content="Max Fowler, Josh Blum, Stephanie Wang">
 
         <script>
@@ -91,7 +91,7 @@
                 <a class="pull-right twitter-link" href="http://www.twitter.com/getparseltongue" target="_blank"> <img src="https://si0.twimg.com/favicons/favicon.ico">
                     @getparseltongue 
                 </a>
-                <a class="pull-right twitter-link" href="mailto:getparseltongue@gmail.com">
+                <a class="pull-right twitter-link" href="mailto:getparseltongue@gmail.com" target="_blank">
                     <i class="glyphicon glyphicon-envelope"></i>
                     getparseltongue@gmail.com
                 </a>
