--- a/truespeak/templates/initializing.html
+++ b/truespeak/templates/initializing.html
@@ -8,8 +8,7 @@
 {% block body %}
 
     <div class="at-least initializing-img-wrapper">
-        <div class="initializing-img">
-{#            <img src="/static/img/flakes.gif"/>#}
+        <div class="centered initializing-img">
         </div>
     </div>
 
