--- a/truespeak/static/css/base.css
+++ b/truespeak/static/css/base.css
@@ -90,7 +90,8 @@ span.password-error-message {
     width: 75px;
     height: 67px;
     display:none;
-    background-image: url("/static/img/3_dots.gif")
+    background-image: url("/static/img/3_dots.gif");
+    background-repeat: no-repeat;
 }
 
 .at-least {
