--- a/truespeak/static/css/initializing.css
+++ b/truespeak/static/css/initializing.css
@@ -2,19 +2,17 @@
     width:100%;
 }
 
-/*.initializing-img {*/
-/*margin-left:auto;*/
-/*margin-right:auto;*/
-/*padding-top:10%;*/
-/*width:200px;*/
-/*}*/
-
-
 .initializing-img {
-    margin-left:auto;
-    margin-right:auto;
-    padding-top:10%;
-    width:100%;
-    height:800px;
-    background-image: url("/static/img/flakes.gif")
+    height:40px;
+    width:120px;
+    background-image: url("/static/img/init_loading_dots.gif");
+    background-repeat: no-repeat;
+}
+
+.centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -100px;
 }
