--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -55,7 +55,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand pt-logo" {% if user.is_authenticated %}href="/settings/"{% else %}href="/"{% endif %}>ParselTongue</a>
+                    <a class="navbar-brand pt-logo" href="/">ParselTongue</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
