--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -25,7 +25,7 @@
                             <input type="password" class="form-control auth-input register_password1" id="exampleInputPassword1" placeholder="Password">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control auth-input register_password2" id="exampleInputPassword2" placeholder="Confirm Password">
+                            <input type="password" class="form-control auth-input register_password2 password-input" id="exampleInputPassword2" placeholder="Confirm Password">
                         </div>
                         <button type="submit" class="btn btn-lg btn-primary auth-button register_button register-button" onClick=”_gaq.push(['_trackEvent', 'sign up', 'register']);”>
                             Register
@@ -46,11 +46,8 @@
                 <div class="lower-section">
 
                     <div class="register-explain">
-                        <h3>
-                            Choose a password you will remember! <br>Your password is used to encrypt your private key and is <strong> non-recoverable. </strong>
-                        </h3>
                         <p>
-                            To learn about how ParselTongue works and why your password is non-recoverable, read our <a href="/faq/">FAQ</a>.
+                            To learn about how ParselTongue works and why your password is <strong> non-recoverable</strong>, read our <a href="/faq/">FAQ</a>.
                         </p>
                     </div>
 
