--- a/truespeak/static/css/login.css
+++ b/truespeak/static/css/login.css
@@ -15,6 +15,7 @@
     float:left;
     margin-right:100px;
     margin-bottom:100px;
+    max-width:400px;
 }
 
 .login-snake {
@@ -25,4 +26,8 @@
 
 .login-gif {
     margin-left: 43%;
+}
+
+.password-error-message {
+    max-width:400px;
 }
