--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -7,61 +7,73 @@
 
 {% block body %}
 
+{#    <div class="initially-hidden pt-no-ext">#}
+{#        <div class="no-ext-wrapper">#}
+{#            <h2 class="home-bold-text no-ext-text">#}
+{#                To use ParselTongue you must first install the extension.#}
+{#            </h2>#}
+{#            <a class="btn btn-primary chrome-btn no-ext-button"#}
+{#               onClick=”_gaq.push(['_trackEvent', 'sign up', 'get parseltongue']);”#}
+{#            href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get Parseltongue for Chrome </a>#}
+{#        </div>#}
+{#    </div>#}
 
-    <div class="container">
+    <div class="pt-ext-installed">
+        <div class="container">
 
-        <div class="auth-container register-container">
+            <div class="auth-container register-container">
 
-            <div>
-                <h1 class="auth-header">
-                    Welcome to ParselTongue
-                </h1>
-                <div class="upper-section">
-                    <form role="form" class="register_form register-form">
-                        <div class="form-group">
-                            <input type="email" class="form-control auth-input register_email" id="exampleInputEmail1" placeholder="Enter email">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control auth-input register_password1" id="exampleInputPassword1" placeholder="Password">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control auth-input register_password2" id="exampleInputPassword2" placeholder="Confirm Password">
-                        </div>
-                        <button type="submit" class="btn btn-lg btn-primary auth-button register_button register-button" onClick=”_gaq.push(['_trackEvent', 'sign up', 'register']);”>
+                <div>
+                    <h1 class="auth-header">
+                        Welcome to ParselTongue
+                    </h1>
+                    <div class="upper-section">
+                        <form role="form" class="register_form register-form">
+                            <div class="form-group">
+                                <input type="email" class="form-control auth-input register_email" id="exampleInputEmail1" placeholder="Enter email">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control auth-input register_password1" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control auth-input register_password2" id="exampleInputPassword2" placeholder="Confirm Password">
+                            </div>
+                            <button type="submit" class="no_ext_installed btn btn-lg btn-primary auth-button register_button register-button" onClick=”_gaq.push(['_trackEvent', 'sign up', 'register']);”>
                             Register
-                        </button>
-                        <div class="register-message-wrapper">
-                            <span class="password-error-message register_error">
+                            </button>
+                            <div class="register-message-wrapper">
+                            <span class="password-error-message register_error error_div">
                                 Oops, both passwords must be the same.
                             </span>
-                            <div class="loading-gif register-loading">
-                                <img class="ellipsis-gif" src="/static/img/3_dots.gif"/>
+                                <div class="loading-gif register-loading">
+                                    <img class="ellipsis-gif" src="/static/img/3_dots.gif"/>
+                                </div>
                             </div>
+                        </form>
+                        <div class="snake-wrapper">
+                            <img class="register-snake" src="/static/img/register-snake.png"/>
                         </div>
-                    </form>
-                    <div class="snake-wrapper">
-                        <img class="register-snake" src="/static/img/register-snake.png"/>
                     </div>
-                </div>
-                <div class="lower-section">
+                    <div class="lower-section">
 
-                    <div class="register-explain">
-                        <h3>
-                            Choose a password you will remember! <br>Your password is used to encrypt your private key and is <strong> non-recoverable. </strong>
-                        </h3>
-                        <p>
-                            To learn about how ParselTongue works and why your password is non-recoverable, read our <a href="/faq/">FAQ</a>.
-                        </p>
+                        <div class="register-explain">
+                            <h3>
+                                Choose a password you will remember! <br>Your password is used to encrypt your private key and is <strong> non-recoverable. </strong>
+                            </h3>
+                            <p>
+                                To learn about how ParselTongue works and why your password is non-recoverable, read our <a href="/faq/">FAQ</a>.
+                            </p>
+                        </div>
+
                     </div>
 
                 </div>
+
+
 
             </div>
 
-
-
         </div>
-
     </div>
 
 {% endblock %}
