--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -27,7 +27,7 @@
 
             <a class="btn btn-primary chrome-btn"
                onClick=”_gaq.push(['_trackEvent', 'sign up', 'get parseltongue']);”
-               href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get Parseltongue for Chrome </a>
+               href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get ParselTongue for Chrome </a>
             {% include "share_snippet.html" %}
 
             <div class="home-tutorial-header">
