--- a/truespeak/templates/login.html
+++ b/truespeak/templates/login.html
@@ -1,11 +1,11 @@
-{% extends "extension_only.html" %}
+{% extends "base.html" %}
 {% load filters %}
 
 {% block css %}
     {% include_style "css/login" %}
 {% endblock %}
 
-{% block the_body %}
+{% block body %}
 
     <div class="container at-least">
         <div class="auth-container">
