--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -46,8 +46,11 @@
                     <div class="lower-section">
 
                         <div class="register-explain">
+                            <h3>
+                                Choose a password you will remember! <br>Your password is used to encrypt your private key and is <strong> non-recoverable. </strong>
+                            </h3>
                             <p>
-                                To learn about how ParselTongue works and why your password is <strong>non-recoverable</strong>, read our <a href="/faq/">FAQ</a>.
+                                To learn about how ParselTongue works and why your password is non-recoverable, read our <a href="/faq/">FAQ</a>.
                             </p>
                         </div>
 
