--- a/truespeak/templates/faq.html
+++ b/truespeak/templates/faq.html
@@ -108,6 +108,7 @@
             <p>
                 The beauty of client-side encryption is you don't have to trust us. We don't store your password. We never have access to your private key.
                 The <a href="https://github.com/maximusfowler/true-speak" target="_blank">public key server</a> and <a href="https://github.com/joshblum/fakeblock" target="_blank">extension</a> are both public on GitHub.
+                You could step through ParselTongue's code as it runs in your browser and trust in that.
             </p>
 
             <h3 id="downsides"> 
