--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
 
-            <a class="btn btn-primary chrome-btn"
+            <a class="btn btn-primary full-width chrome-btn"
                onClick=”_gaq.push(['_trackEvent', 'sign up', 'get parseltongue']);”
                href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get ParselTongue for Chrome </a>
             {% include "share_snippet.html" %}
