--- a/truespeak/templates/initializing.html
+++ b/truespeak/templates/initializing.html
@@ -1,14 +1,10 @@
 {% extends "base.html" %}
 {% load filters %}
 
-{% block css %}
-	{% include_style "css/initializing" %}
-{% endblock %}
-
 {% block body %}
 
-    <div class="at-least initializing-img-wrapper">
-        <div class="centered initializing-img">
+    <div class="at-least full-width">
+        <div class="centered loading-gif-lg">
         </div>
     </div>
 
