--- a/truespeak/templates/login.html
+++ b/truespeak/templates/login.html
@@ -21,7 +21,7 @@
                         <div class="form-group">
                             <input type="password" class="form-control auth-input login_password" id="exampleInputPassword1" placeholder="Password">
                         </div>
-                        <button type="submit" class="no_ext_installed btn btn-lg btn-primary auth-button login_button">
+                        <button type="submit" class="no_ext_installed btn btn-lg btn-primary full-width login_button">
                             Login
                         </button>
                     <span class="password-error-message login_error login-error-message"> 
