--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -27,7 +27,7 @@
                             <div class="form-group">
                                 <input type="password" class="form-control auth-input register_password2 password-input" id="exampleInputPassword2" placeholder="Confirm Password">
                             </div>
-                            <button type="submit" class="no_ext_installed btn btn-lg btn-primary auth-button register_button register-button" onClick=”_gaq.push(['_trackEvent', 'sign up', 'register']);”>
+                            <button type="submit" class="no_ext_installed btn btn-lg btn-primary full-width register_button register-button" onClick=”_gaq.push(['_trackEvent', 'sign up', 'register']);”>
                             Register
                             </button>
                             <div class="register-message-wrapper">
