--- a/truespeak/templates/settings.html
+++ b/truespeak/templates/settings.html
@@ -46,7 +46,11 @@
                             </ul>
                         </div>
 
-
+                    <div style="clear:both;"></div>
+                </div>
+                <div class="settings-explanation">
+                    <p>Add any email addresses which you forward to Gmail
+                        so that other ParselTongue users can reach you by all of your accounts.</p>
                 </div>
             </div>
         </div>
