adding a settings screenshot to end of tutorial

--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -9,6 +9,7 @@
     <li data-target="#tutorial-carousel" data-slide-to="1" class="carousel-indicator"></li>
     <li data-target="#tutorial-carousel" data-slide-to="2" class="carousel-indicator"></li>
     <li data-target="#tutorial-carousel" data-slide-to="3" class="carousel-indicator"></li>
+    <li data-target="#tutorial-carousel" data-slide-to="4" class="carousel-indicator"></li>
   </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
@@ -42,6 +43,14 @@
             <div class="carousel-caption">
                 <p>
                     Use the popup to make encryption a default.
+                </p>
+            </div>
+        </div>
+        <div class="item preview">
+            <img class="carousel-image" src="/static/img/tutorial/settings.png">
+            <div class="carousel-caption">
+                <p>
+                  Visit <a href="/settings">settings</a> to add other email addresses associated with your gmail.
                 </p>
             </div>
         </div>
