--- a/truespeak/templates/faq.html
+++ b/truespeak/templates/faq.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="faq-nav affix col-md-3">
+    <div class="faq-nav affix col-md-3 hidden-xs hidden-sm">
         <ul class="nav nav-pills nav-stacked">
             <li class="active">
                 <a href="#use">
