--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -31,7 +31,7 @@
             {% include "share_snippet.html" %}
 
             <div class="home-tutorial-header">
-               See the <a href="#tutorial-carousel">tutorial</a> or read our <a href="/faq/">FAQ</a> to learn more.
+               See the tutorial below or read our <a href="/faq/">FAQ</a> to learn more.
             </div>
             
         </div>
